objects/MedProBT__BSA_Record__c.object
<CustomObject>
    <fields>
        <fullName>MedProBT__Batch_Sync_Audit__c</fullName>
        <label>Batch Sync Audit</label>
        <referenceTo>MedProBT__Batch_Sync_Audit__c</referenceTo>
        <relationshipName>BSA_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MedProBT__Existing_Value__c</fullName>
        <label>Existing Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__External_ID_Updated__c</fullName>
        <label>External ID Updated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Input_Column_Name__c</fullName>
        <label>Input Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__SFDC_Field_Name__c</fullName>
        <label>SFDC Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Secondary_Match_Updated__c</fullName>
        <label>Secondary Match Updated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Update_Results__c</fullName>
        <label>Update Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MedPro BSA Record</label>
    <nameField>
        <displayFormat>BSAR-{000000}</displayFormat>
        <label>BSA Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro BSA Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>